[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timebasedcv"
version = "0.3.0"
description = "Time based cross validation"

license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Francesco Bruzzesi"}]

dependencies = [
    "python-dateutil",
    "numpy",
    "narwhals>=1.0.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
documentation = "https://fbruzzesi.github.io/timebasedcv/"
repository = "https://github.com/fbruzzesi/timebasedcv"
issue-tracker = "https://github.com/fbruzzesi/timebasedcv/issues"

[project.optional-dependencies]
scikit-learn = ["scikit-learn>=0.19"]

[dependency-groups]
testing = [
    "covdefaults>=2.3.0",
    "dask>=2023.1.0",
    "pandas>=1.2.0",
    "polars>=0.20.3",
    "pyarrow>=11.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-autorefs",
]
typing = [
    "mypy",
    "pandas-stubs",
    "pyright",
    "types-python-dateutil",
    "typing-extensions",
]

dev = [
    "pre-commit",
    "ruff>=0.15.6",
    {include-group = "testing"},
    {include-group = "docs"},
    {include-group = "typing"},
]

[tool.hatch.build.targets.sdist]
only-include = ["timebasedcv"]

[tool.hatch.build.targets.wheel]
packages = ["timebasedcv"]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-safe-fixes = [
  "C419",    # unnecessary-comprehension-in-call
  "C420",    # unnecessary-dict-comprehension-for-iterable
  "EM101",   # raw-string-in-exception
  "EM102",   # f-string-in-exception
  "PLR6201", # literal-membership
  "TC",      # flake8-type-checking
  "UP",      # pyupgrade
  "PLW1514", # unspecified-encoding
]
extend-select = [
  "PLR0914", # too-many-locals
  "PLR0916", # too-many-boolean-expressions
  "PLR1702", # too-many-nested-blocks
  "PLR6201", # literal-membership
  "PLW1514", # unspecified-encoding
]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",  # Checks for undocumented public module definitions.
    "D104",  # Checks for undocumented public package definitions.
    "D107",  # Checks for public __init__ method definitions that are missing docstrings.
    "E731",  # Checks for lambda expressions which are assigned to a variable.
    "ISC001",
    "N803",  # Checks for argument names that do not follow the snake_case convention.
    # "EM101",  # Checks for the use of string literals in exception constructors.
    # "ISC001",  # Checks for implicitly concatenated strings on a single line.
    "RET505",  # Checks for else statements with a return statement in the preceding if block.
    "RET506",
    # "TRY003",  # Checks for long exception messages that are not defined in the exception class itself.
    "DTZ"
    ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "N802", "N806", "PD901", "PLC0415", "PLR0913", "PLR2004", "PT006", "PT007", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "error",
]
xfail_strict = true

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 95
omit = [
  "**/_typing.py",
]
exclude_also = [
  "except ImportError",
]

[tool.mypy]
# ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true


